RESOLVED FIXED278530
Ignore push events from push subscriptions without appropriate permissions
https://bugs.webkit.org/show_bug.cgi?id=278530
Summary Ignore push events from push subscriptions without appropriate permissions
Ben Nham
Reported 2024-08-22 11:18:48 PDT
See PR
Attachments
Ben Nham
Comment 1 2024-08-22 11:18:49 PDT
Ben Nham
Comment 2 2024-08-22 11:22:18 PDT
EWS
Comment 3 2024-08-22 14:33:32 PDT
Committed 282634@main (1b69cdebb4f8): <https://commits.webkit.org/282634@main> Reviewed commits have been landed. Closing PR #32599 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.