Ignore push events from push subscriptions without appropriate permissions https://bugs.webkit.org/show_bug.cgi?id=278530 rdar://131367393

Reviewed by Brady Eidson.

Now that we've moved push and notification permission management into webpushd on iOS, we should
avoid processing push events from subscriptions without the appropriate permissions.

This commit also mentions rdar://134509619, which would make it so that we don't get push events
from clips without the appropriate permissions in the first place. We cannot implement that right
now without some work from other teams.

* Source/WebKit/webpushd/WebPushDaemon.h:
* Source/WebKit/webpushd/WebPushDaemon.mm:
(WebPushD::platformNotificationCenterBundleIdentifier):
(WebPushD::WebPushDaemon::handleIncomingPush):
(WebPushD::WebPushDaemon::handleIncomingPushImpl):

Canonical link: https://commits.webkit.org/282634@main